--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
       - run: rustup override set nightly
       - run: rustup show active-toolchain -v
       # Serde 1.0.227 fails to build with `--cfg docsrs`, only pass it to our own packages
-      - run: cargo rustdoc -p clickhouse-derive --all-features -- -D warnings --cfg docsrs
+      - run: cargo rustdoc -p clickhouse-macros --all-features -- -D warnings --cfg docsrs
       - run: cargo rustdoc -p clickhouse-types --all-features -- -D warnings --cfg docsrs
       - run: cargo rustdoc -p clickhouse --all-features -- -D warnings --cfg docsrs
 
