--- a/Cargo.toml
+++ b/Cargo.toml
@@ -155,6 +155,8 @@ quanta = { version = "0.12", optional = true }
 replace_with = { version = "0.1.7" }
 polonius-the-crab = "0.5.0"
 
+bnum = "0.13.0"
+
 [dev-dependencies]
 clickhouse-macros = { version = "0.3.0", path = "macros" }
 criterion = "0.6"
