--- a/release.toml
+++ b/release.toml
@@ -1,4 +1,6 @@
-pre-release-commit-message = "chore: release {{version}}"
+pre-release-commit-message = "chore: release clickhouse {{version}}"
+# Otherwise `{{version}}` isn't filled in
+consolidate-commits = false
 pre-release-replacements = [
     {file="README.md", search="^clickhouse =(.*)\"[0-9.]+\"", replace="{{crate_name}} =${1}\"{{version}}\""},
     {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
