disable fail-fast

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,7 @@ jobs:
   test-local:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         clickhouse: [ latest, head ]
         include:
